--- a/frontend/apps/firework/package.json
+++ b/frontend/apps/firework/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "0.469.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-error-boundary": "^5.0.0",
     "react-router": "7.1.1",
     "tailwind-merge": "2.6.0"
   },
