--- a/frontend/packages/code-linty/package.json
+++ b/frontend/packages/code-linty/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-linter",
+  "name": "code-linty",
   "version": "0.0.1",
   "description": "统一lint代码配置",
   "license": "MIT",
@@ -18,6 +18,8 @@
   ],
   "scripts": {
     "build": "pnpm unbuild",
+    "lint": "eslint .",
+    "test": "vitest",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -51,10 +53,17 @@
   },
   "devDependencies": {
     "@types/eslint": "9.6.1",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "22.10.5",
+    "execa": "^9.5.2",
+    "fast-glob": "^3.3.3",
+    "fs-extra": "^11.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "tsx": "4.19.2",
     "typescript": "5.7.3",
     "unbuild": "3.2.0",
+    "vitest": "^2.1.8",
     "vue": "3.5.13"
   }
 }
