fix: 修复了购物车组件中数量计算错误的问题

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,13 @@
   "keywords": [],
   "license": "MIT",
   "author": "yangguodong",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint . --fix"
   },
   "prettier": "code-pretty",
   "dependencies": {
+    "code-linty": "0.0.2",
     "code-pretty": "0.0.1"
   }
 }
